--- a/SpringBootREST/src/main/resources/application.properties
+++ b/SpringBootREST/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SpringBootREST
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=saisasank@09
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
