--- a/Spring-data-JPA-ex/src/main/resources/application.properties
+++ b/Spring-data-JPA-ex/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Spring-data-JPA-ex
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=saisasank@09
+spring.datasource.password= ****
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
